<resources>
    <string name="app_name">acomodacaoJava</string>
    <string name="btn_buscar_acomodacoes">Buscar Acomodações</string>
    <string name="btn_voltar">Voltar</string>
    <string name="label_capacidade">Capacidade:</string>
    <string name="label_preco">Preço:</string>
    <string name="label_logradouro">Logradouro:</string>
    <string name="label_numero">Número:</string>
    <string name="label_complemento">Complemento:</string>
    <string name="label_bairro">Bairro:</string>
    <string name="label_cidade">Cidade:</string>
    <string name="label_estado">Estado:</string>
    <string name="label_descricao">Descrição:</string>
    <string name="google_maps_key">AIzaSyAxFARM9NrPcw8lyIsFrwPRrG1v5kdaKL4</string>

</resources>
